--- a/taskmangwt/gwt/src/main/webapp/WebApp.html
+++ b/taskmangwt/gwt/src/main/webapp/WebApp.html
@@ -16,7 +16,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>Bark - task manager</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -41,7 +41,7 @@
       </div>
     </noscript>
 
-    <h1>GWT Application</h1>
+    <center><h3>Bark - task manager</h3></center>
 
     <div id = "gwtContainer"></div>
   </body>
